kubernetes/single-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-container
  namespace: hh2
spec:
  containers:
  - name: my-container
    image: ghcr.io/pbures/habbithero2-backend:v0.0.5
    ports:
    - containerPort: 3000
    resources:
      limits:
        memory: "512Mi"
        cpu: "500m"
      requests:
        memory: "256Mi"
        cpu: "250m"
  imagePullSecrets:
  - name: ghcr-secret
