kubernetes/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hh2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-hh2-deployment
  namespace: hh2
  labels:
    app: fe-hh2-deployment
spec:
  selector:
    matchLabels:
      app: fe-hh2-app
  replicas: 1

  template:
    metadata:
      labels:
        app: fe-hh2-app
    spec:
      containers:
        - name: hh2-container
          image: ghcr.io/pbures/habbithero2:v0.0.26
          resources:
            requests:
              cpu: 99m
              memory: 95Mi
            limits:
              cpu: 100m
              memory: 200Mi
          ports:
            - containerPort: 80
              name: fe-hh2-port

      imagePullSecrets:
        - name: ghcr-secret

      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  namespace: hh2
  name: fe-hh2-service
spec:
  selector:
    app: fe-hh2-app
  ports:
    - protocol: TCP
      port: 3007
      targetPort: fe-hh2-port

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-hh2-ingress
  namespace: hh2
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"

    #The following two are needed to make the sessions sticky for
    #the socket.io working properly.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $forwarded_client_ip "";
      if ($http_x_forwarded_for ~ "^([^,]+)") {
        set $forwarded_client_ip $1;
      }
      set $client_ip $remote_addr;
      if ($forwarded_client_ip != "") {
        set $client_ip $forwarded_client_ip;
      }
    nginx.ingress.kubernetes.io/upstream-hash-by: "$client_ip"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - h2.buresovi.net
      secretName: tls-secret
  rules:
    - host: h2.buresovi.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-hh2-service
                port:
                  number: 3007

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-hh2-app
  namespace: hh2
  labels:
    app: be-hh2-app
spec:
  selector:
    matchLabels:
      app: be-hh2-app
  replicas: 1

  template:
    metadata:
      labels:
        app: be-hh2-app

    spec:
      containers:
        - name: be-hh2
          image: ghcr.io/pbures/habbithero2-backend:v0.0.26
          resources:
            requests:
              cpu: 100m
              memory: 95Mi
            limits:
              cpu: 100m
              memory: 200Mi
          ports:
            - containerPort: 3000
              name: be-hh2-port

      imagePullSecrets:
        - name: ghcr-secret

      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  namespace: hh2
  name: be-hh2-service
spec:
  selector:
    app: be-hh2-app
  ports:
    - protocol: TCP
      port: 3017
      targetPort: be-hh2-port

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-hh2-ingress
  namespace: hh2
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"

    #The following two are needed to make the sessions sticky for
    #the socket.io working properly.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $forwarded_client_ip "";
      if ($http_x_forwarded_for ~ "^([^,]+)") {
        set $forwarded_client_ip $1;
      }
      set $client_ip $remote_addr;
      if ($forwarded_client_ip != "") {
        set $client_ip $forwarded_client_ip;
      }
    nginx.ingress.kubernetes.io/upstream-hash-by: "$client_ip"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - be.h2.buresovi.net
      secretName: be-tls-secret
  rules:
    - host: be.h2.buresovi.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: be-hh2-service
                port:
                  number: 3017
